--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
-h1 {
-    color: blue;
+body {
+    padding-top: 50px;
+}
+
+.starter-template {
+    padding: 40px 15px;
+    text-align: center;
 }
