--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,25 @@
 body {
     padding-top: 50px;
     height: 100%;
+    background-color: #000;
+    color: #fff;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
     background-color: #333;
 }
 
-.starter-template {
-    padding: 40px 15px;
+.footer .container {
+    margin-top: 20px;
+}
+
+.footer p {
     text-align: center;
 }
